Fix for overlaping elements in navbar

--- a/src/main/webapp/app/layouts/navbar/navbar.component.scss
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.scss
@@ -38,7 +38,7 @@ Navbar
   }
 }
 
-.active {
+.active-l {
   background-color: rgba(255, 255, 255, 0.5);
   border-radius: 10px;
   backdrop-filter: blur(20px);
